changed title on index and ran boilerplate

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<base href="/">
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>AngularJS Boilerplate</title>
-		<meta name="description" content="Simple AngularJS Boilerplate to kick start your new project with SASS support and Gulp watch/build tasks">
+		<title>Fan Finder</title>
+		<meta name="description" content="Application to find fans of similar teams in a local area">
 
 		<!-- mobile meta -->
 		<meta name="HandheldFriendly" content="True">
