--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<link rel="stylesheet" href="bower_components/OwlCarousel/owl-carousel/owl.carousel.css" />
 		<link rel="stylesheet" type="text/css" href="styles/style.css" />
 		<!-- endbuild -->
+		
 
 	</head>
 
@@ -64,6 +65,9 @@
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<!-- endbuild -->
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE62uTdcEyUvPW7gW7rwSfPMPaxLKMMXU&callback="
+    async defer></script>
 
 	<!-- Angular components -->
 	<!-- build:appcomponents js/appcomponents.js -->
