--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<!-- endbuild -->
 
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE62uTdcEyUvPW7gW7rwSfPMPaxLKMMXU&callback="
-    async defer></script>
 
 	<!-- Angular components -->
 	<!-- build:appcomponents js/appcomponents.js -->
@@ -85,6 +83,7 @@
 	<script type="text/javascript" src="app/factory.js"></script>
 	<script type="text/javascript" src="app/controller.js"></script>
 	<!-- endbuild -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE62uTdcEyUvPW7gW7rwSfPMPaxLKMMXU&callback="></script>
 
 	<!-- templates from $templateCache -->
 	<!-- build:templates -->
