removed error from characters being left in code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<base href="/">
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Fan Finder</title>
+		<title>Fan Findr</title>
 		<meta name="description" content="Application to find fans of similar teams in a local area">
 
 		<!-- mobile meta -->
